--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^2.26.14",
     "del": "6.0.0",
     "gulp": "4.0.2",
     "gulp-tslint": "8.1.4",
