--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.26.14",
+    "browserify": "^17.0.0",
     "del": "6.0.0",
     "gulp": "4.0.2",
     "gulp-tslint": "8.1.4",
     "gulp-typescript": "6.0.0-alpha.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "tsify": "^5.0.4",
     "tslint": "6.1.3",
-    "typescript": "4.3.4"
+    "typescript": "4.3.4",
+    "vinyl-source-stream": "^2.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
